--- a/html/dark/index.html
+++ b/html/dark/index.html
@@ -12,9 +12,9 @@
       <legend>SYSTEM.IDENTITY</legend>
       <div class="terminal-box">
         <pre>
+[WELCOME]: BIENVENUE • BENVENUTO • BIENVENIDO • WILLKOMMEN • VÄLKOMMEN • ДОБРО ПОЖАЛОВАТЬ • 환영합니다 • 欢迎 • <span class="japanese">ようこそ</span>
 [USER]: <span class="japanese">フロデヴ</span> • FLODEVV
-[SHELL]: /usr/local/profile
-[STATUS]: CODE
+[DESC]: LOVE TO CODE • <span class="japanese">こーでぃんぐがだいすき</span>
         </pre>
       </div>
     </fieldset>
@@ -23,9 +23,9 @@
       <legend>USER.INFO</legend>
       <div class="terminal-box pixel-border">
         <pre>
-STATUS  : STUDENT
-WORK    : ACTIVE
-ROLE    : FULL-STACK_DEVELOPER
+[STATUS]: <span class="japanese">がくせい</span> • STUDENT
+[WORK]: <span class="japanese">アクティブ</span> • APPRENTICE
+[ROLE]: <span class="japanese">デベロッパー</span> • FULL-STACK DEVELOPER
         </pre>
       </div>
     </fieldset>
@@ -34,9 +34,9 @@ ROLE    : FULL-STACK_DEVELOPER
       <legend>ACTIVE.PROJECTS</legend>
       <div class="terminal-box pixel-border">
         <pre>
-$ ls projects/
-> <a href="https://github.com/FloDevv/MoriohCho-Radio">[MORIOHCHO-RADIO]</a>
-> <a href="https://github.com/FloDevv/Zapani">[ZAPANI]</a>
+$ ls projects
+> <a href="https://github.com/FloDevv/MoriohCho-Radio">[MORIOHCHO-RADIO]</a> <span class="japanese">ラジオ</span>
+> <a href="https://github.com/FloDevv/Zapani">[ZAPANI]</a> <span class="japanese">ザパニ</span>
         </pre>
       </div>
     </fieldset>
@@ -45,13 +45,13 @@ $ ls projects/
       <legend>SYSTEM.TECHS</legend>
       <div class="terminal-box pixel-border">
         <pre>
-NEXT.JS
-REACT.JS
-TYPESCRIPT
-TAILWINDCSS
-NEST.JS
-PYTHON
-RUST
+NEXT.JS <span class="japanese">ネクスト</span>
+REACT.JS <span class="japanese">リアクト</span>
+TYPESCRIPT <span class="japanese">タイプスクリプト</span>
+TAILWINDCSS <span class="japanese">テイルウィンド</span>
+NEST.JS <span class="japanese">ネスト</span>
+PYTHON <span class="japanese">パイソン</span>
+RUST <span class="japanese">ラスト</span>
         </pre>
       </div>
     </fieldset>
