--- a/html/dark/index.html
+++ b/html/dark/index.html
@@ -12,7 +12,7 @@
       <legend>SYSTEM.IDENTITY</legend>
       <div class="terminal-box">
         <pre>
-[WELCOME]: BIENVENUE • BENVENUTO • BIENVENIDO • WILLKOMMEN • VÄLKOMMEN • ДОБРО ПОЖАЛОВАТЬ • 환영합니다 • 欢迎 • <span class="japanese">ようこそ</span>
+[WELCOME]: BIENVENUE • BIENVENIDO • WILLKOMMEN • VÄLKOMMEN • ДОБРО ПОЖАЛОВАТЬ • 환영합니다 • 欢迎 • <span class="japanese">ようこそ</span>
 [USER]: <span class="japanese">フロデヴ</span> • FLODEVV
 [DESC]: LOVE TO CODE • <span class="japanese">こーでぃんぐがだいすき</span>
         </pre>
