use double font

--- a/html/dark/index.html
+++ b/html/dark/index.html
@@ -9,29 +9,29 @@
 
   <body>
     <fieldset align="left">
-      <legend>SYSTEM.IDENTITY</legend>
+      <legend><span class="pressstart">SYSTEM.IDENTITY</span></legend>
       <div class="terminal-box">
         <pre>
-[WELCOME]: BIENVENUE•BIENVENIDO•WILLKOMMEN•ДОБРО ПОЖАЛОВАТЬ•<span class="japanese">ようこそ</span>
-[USER]: <span class="japanese">フロデヴ</span> • FLODEVV
-[DESC]: LOVE TO CODE • <span class="japanese">こーでぃんぐがだいすき</span>
+<span class="pressstart">[WELCOME]:</span> BIENVENUE • BIENVENIDO • WILLKOMMEN • ДОБРО ПОЖАЛОВАТЬ • <span class="japanese">ようこそ</span>
+<span class="pressstart">[USER]:</span> <span class="japanese">フロデヴ</span> • FLODEVV
+<span class="pressstart">[DESC]:</span> LOVE TO CODE • <span class="japanese">こーでぃんぐがだいすき</span>
         </pre>
       </div>
     </fieldset>
 
     <fieldset align="left">
-      <legend>USER.INFO</legend>
+      <legend><span class="pressstart">USER.INFO</span></legend>
       <div class="terminal-box pixel-border">
         <pre>
-[STATUS]: <span class="japanese">がくせい</span> • STUDENT
-[WORK]: <span class="japanese">アクティブ</span> • APPRENTICE
-[ROLE]: <span class="japanese">デベロッパー</span> • FULL-STACK DEVELOPER
+<span class="pressstart">[STATUS]:</span> <span class="japanese">がくせい</span> • STUDENT
+<span class="pressstart">[WORK]:</span> <span class="japanese">アクティブ</span> • APPRENTICE
+<span class="pressstart">[ROLE]:</span> <span class="japanese">デベロッパー</span> • FULL-STACK DEVELOPER
         </pre>
       </div>
     </fieldset>
 
     <fieldset align="left">
-      <legend>ACTIVE.PROJECTS</legend>
+      <legend><span class="pressstart">ACTIVE.PROJECTS</span></legend>
       <div class="terminal-box pixel-border">
         <pre>
 $ ls projects
@@ -42,7 +42,7 @@ $ ls projects
     </fieldset>
 
     <fieldset align="left">
-      <legend>SYSTEM.TECHS</legend>
+      <legend><span class="pressstart">SYSTEM.TECHS</span></legend>
       <div class="terminal-box pixel-border">
         <pre>
 NEXT.JS <span class="japanese">ネクスト</span>
