--- a/html/dark/index.html
+++ b/html/dark/index.html
@@ -44,15 +44,7 @@ $ ls projects
     <fieldset align="left">
       <legend><span class="pressstart">SYSTEM.TECHS</span></legend>
       <div class="terminal-box pixel-border">
-        <pre>
-NEXT.JS <span class="japanese">ネクスト</span>
-REACT.JS <span class="japanese">リアクト</span>
-TYPESCRIPT <span class="japanese">タイプスクリプト</span>
-TAILWINDCSS <span class="japanese">テイルウィンド</span>
-NEST.JS <span class="japanese">ネスト</span>
-PYTHON <span class="japanese">パイソン</span>
-RUST <span class="japanese">ラスト</span>
-        </pre>
+        <pre><div class="tech-row"><span>NEXT.JS</span> <img src="../../image/pixel/next.png" alt="Next.js" class="tech-icon"></div><div class="tech-row"><span>REACT.JS</span> <img src="../../image/pixel/react.png" alt="React.js" class="tech-icon"></div><div class="tech-row"><span>TYPESCRIPT</span> <img src="../../image/pixel/ts.png" alt="TypeScript" class="tech-icon"></div><div class="tech-row"><span>TAILWINDCSS</span> <img src="../../image/pixel/tailwind.png" alt="TailwindCSS" class="tech-icon"></div><div class="tech-row"><span>NEST.JS</span> <img src="../../image/pixel/nest.png" alt="Nest.js" class="tech-icon"></div><div class="tech-row"><span>PYTHON</span> <img src="../../image/pixel/python.png" alt="Python" class="tech-icon"></div><div class="tech-row"><span>RUST</span> <img src="../../image/pixel/rust.png" alt="Rust" class="tech-icon"></div></pre>
       </div>
     </fieldset>
 
